adding events route and population also connecting login and register pages and istalling ejs and using it

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,10 @@
                   <label class="form-check-label" for="exampleCheck1">Check me out</label>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a href="/register">register a new account</a>
+
               </form>
+
         </div>
     </div>
     
