--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Page</title>
-    <style>
-        html,body {
-        height: 100%
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Add Page</title>
+  <style>
+    html,
+    body {
+      height: 100%
+    }
+  </style>
 </head>
+
 <body>
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <form class="col" action="/speaker/add" method="POST">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">_Id</label>
-                  <input type="text" name="_id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">FullName</label>
-                  <input type="text" name="FullName" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">UserName</label>
-                  <input type="text" name="UserName" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="Password" name="Password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">city</label>
-                  <input type="text" name="Address.city" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">street</label>
-                  <input type="text" name="Address.street" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">building</label>
-                    <input type="text" name="Address.building" class="form-control" id="exampleInputPassword1">
-                  </div>
-                <button type="submit" class="btn btn-primary">add</button>
-                <a href="/login">Already have an account</a>
-              </form>
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+      <form class="col" action="/speaker/add" method="POST">
+        <div class="form-group">
+          <label for="exampleInputEmail1">_Id</label>
+          <input type="text" name="_id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
-        
+        <div class="form-group">
+          <label for="exampleInputPassword1">FullName</label>
+          <input type="text" name="FullName" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">UserName</label>
+          <input type="text" name="UserName" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="Password" name="Password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">city</label>
+          <input type="text" name="Address.city" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">street</label>
+          <input type="text" name="Address.street" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">building</label>
+          <input type="text" name="Address.building" class="form-control" id="exampleInputPassword1">
+        </div>
+        <button type="submit" class="btn btn-primary">add</button>
+        <a href="/login">Already have an account</a>
+      </form>
     </div>
-    
+
+  </div>
+
 </body>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<script src="js/bootstrap.min.js"></script>
+
 </html>
