--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/speaker/profile">Welcome <%= UserName %> </a>
+    <a class="navbar-brand" href="/admin/profile">Welcome <%= UserName %> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,10 +17,10 @@
             Events Options
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/event/list">list events</a>
-            <a class="dropdown-item" href="/event/add">add events</a>
-            <a class="dropdown-item" href="/event/delete">delete events</a>
-            <a class="dropdown-item" href="/event/edit">edit events</a>
+            <a class="dropdown-item" href="/admin/event/list">list events</a>
+            <a class="dropdown-item" href="/admin/event/add">add events</a>
+            <a class="dropdown-item" href="/admin/event/delete">delete events</a>
+            <a class="dropdown-item" href="/admin/event/edit">edit events</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
@@ -30,10 +30,10 @@
             Speaker Options
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/speaker/list">list speakers</a>
-            <a class="dropdown-item" href="/speaker/add">add speakers</a>
-            <a class="dropdown-item" href="/speaker/delete">delete speakers</a>
-            <a class="dropdown-item" href="/speaker/edit">edit speakers</a>
+            <a class="dropdown-item" href="/admin/speaker/list">list speakers</a>
+            <a class="dropdown-item" href="/admin/speaker/add">add speakers</a>
+            <a class="dropdown-item" href="/admin/speaker/delete">delete speakers</a>
+            <a class="dropdown-item" href="/admin/speaker/edit">edit speakers</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
