--- a/views/events/delete.ejs
+++ b/views/events/delete.ejs
@@ -14,7 +14,7 @@
     <%- include('../partials/nav.ejs') %>
     <div class="container h-100">
         <div class="row h-100 align-items-center">
-            <form class="col" action="/event/delete" method="POST">
+            <form class="col" action="/admin/event/delete" method="POST">
                 <div class="form-group">
                   <label for="exampleInputPassword1">Events</label>
                   <select class="custom-select" name="_id">
