--- a/views/speakers/add.ejs
+++ b/views/speakers/add.ejs
@@ -17,10 +17,10 @@
     <%- include('../partials/nav.ejs') %>
   <div class="container h-100">
     <div class="row h-100 align-items-center">
-      <form class="col" action="/speaker/add" method="POST">
+      <form class="col" action="/admin/speaker/add" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">_Id</label>
-          <input type="text" name="_id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="text" id="id" name="_id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">FullName</label>
@@ -46,7 +46,7 @@
           <label for="exampleInputPassword1">building</label>
           <input type="text" name="Address.building" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Add New Speaker</button>
+        <button onclick="addspeaker()" class="btn btn-primary">Add New Speaker</button>
       </form>
     </div>
 
@@ -56,5 +56,21 @@
 <script src="/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 <script src="/js/bootstrap.min.js"></script>
-
+<script>
+  function addspeaker() {
+    idd = $("#id").val()
+    $.ajax({
+      url: "http://localhost:8080/admin/speaker/add",
+      method: "POST",
+      contentType: "application/json",
+      data: JSON.stringify({id:idd}),
+      dataType: "json",
+      success: function (result) { 
+       },
+      error: function (error) {
+        alert("failed to add")
+       }
+    })
+  }
+</script>
 </html>
