--- a/views/speakers/edit.ejs
+++ b/views/speakers/edit.ejs
@@ -14,7 +14,7 @@
     <%- include('../partials/nav.ejs') %>
     <div class="container h-100">
         <div class="row h-100 align-items-center">
-            <form class="col" action="/speaker/edit" method="POST">
+            <form class="col" action="/admin/speaker/edit" method="POST">
                 <div class="form-group">
                   <label for="exampleInputPassword1">Speakers</label>
                   <select class="custom-select" name="_id">
