--- a/views/speakers/editthis.ejs
+++ b/views/speakers/editthis.ejs
@@ -17,7 +17,7 @@
     <%- include('../partials/nav.ejs') %>
     <div class="container h-100">
         <div class="row h-100 align-items-center">
-            <form class="col" action="/speaker/editthis" method="POST">
+            <form class="col" action="/admin/speaker/editthis" method="POST">
                 <div class="form-group">
                     <label for="exampleInputEmail1">_Id</label>
                     <input type="text" readonly value="<%= data._id %>" name="_id" class="form-control" id="exampleInputEmail1"
