--- a/views/events/addevent.ejs
+++ b/views/events/addevent.ejs
@@ -18,11 +18,11 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <form class="col" action="/admin/event/add" method="POST">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="exampleInputEmail1">_Id</label>
           <input type="text" id="id" name="_id" class="form-control" id="exampleInputEmail1"
             aria-describedby="emailHelp">
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="exampleInputPassword1">title</label>
           <input type="text" name="title" class="form-control" id="exampleInputPassword1">
