--- a/views/speakers/add.ejs
+++ b/views/speakers/add.ejs
@@ -20,10 +20,10 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <form class="col" action="/admin/speaker/add" method="POST" enctype="multipart/form-data">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="exampleInputEmail1">_Id</label>
           <input type="text" id="id" name="_id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="exampleInputPassword1">FullName</label>
           <input type="text" name="FullName" class="form-control" id="exampleInputPassword1">
