--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -1,10 +1,10 @@
-<div class="row chatdiv fixed-bottom">
+<div class="row chatdiv fixed-bottom "><!--fixed-bottom-->
     <div class="col-md-5">
         <div class="panel panel-primary">
             <div class="panel-heading" id="accordion">
                 <span class="glyphicon glyphicon-comment"></span>
                 <div class="btn-group pull-right">
-                    <a type="button" class="btn btn-default btn-xs" data-toggle="collapse" data-parent="#accordion"
+                    <a type="button" class="btn btn-info btn-xs" data-toggle="collapse" data-parent="#accordion"
                         href="#collapseOne">
                         <span class="glyphicon glyphicon-chevron-down">Chat</span>
                     </a>
