--- a/views/speakers/login.ejs
+++ b/views/speakers/login.ejs
@@ -19,12 +19,12 @@
       <form class="col" action="/login" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">User name</label>
-          <input type="text" name="UserName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="text" id="UserName" name="UserName" class="form-control" aria-describedby="emailHelp">
           <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" name="Password" class="form-control" id="exampleInputPassword1">
+          <input type="password"  name="Password" class="form-control" id="Password">
         </div>
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -40,5 +40,22 @@
 <script src="/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 <script src="/js/bootstrap.min.js"></script>
+<!-- <script>
 
+  function checkDB(){
+    let username=$("#UserName").val()
+    let password=$("#Password").val()
+    $.ajax({
+      url:"http://localhost:8082//login",
+      method:"POST",
+      contentType:"application/json",
+      data:JSON.stringify({UserName:username,Password:password}),
+      dataType:"json",
+      success:function(result){ /*on success */},
+      error:function(error,errortext,errorthrown){
+        console.log(error.status)
+      }
+      });
+  }
+</script> -->
 </html>
