added redirect admin to register insteaed of add / profile info/validation for login username and password if wrong pass and if wrong name / validation for register using connect flash

--- a/views/speakers/list.ejs
+++ b/views/speakers/list.ejs
@@ -62,8 +62,7 @@
       data:JSON.stringify({id:idd}), 
       dataType:"json", 
       success:function(result){ 
-        $(button).parents('tr').hide('slow')
-        // $(button).parents('tr').remove()
+        $(button).parents('tr').remove()
       }, 
       error:function(error){
         console.log('fail')
