--- a/views/events/list.ejs
+++ b/views/events/list.ejs
@@ -71,7 +71,7 @@
       dataType:"json", 
       success:function(result){ 
         console.log(button)
-        $(button).parents('tr').hide('slow')
+        $(button).parents('tr').remove()
       }, 
       error:function(error){
         console.log('fail')
