--- a/views/speakers/login.ejs
+++ b/views/speakers/login.ejs
@@ -20,11 +20,13 @@
         <div class="form-group">
           <label for="exampleInputEmail1">User name</label>
           <input type="text" id="UserName" name="UserName" class="form-control" aria-describedby="emailHelp">
+          <small class="text-danger"><%= notfound %></small>
           <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
           <input type="password"  name="Password" class="form-control" id="Password">
+          <small class="text-danger"><%= wrongpassword %></small>
         </div>
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
