--- a/views/speakers/register.ejs
+++ b/views/speakers/register.ejs
@@ -21,29 +21,48 @@
           <label for="exampleInputEmail1">_Id</label>
           <input type="text" name="_id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div> -->
+        
         <div class="form-group">
           <label for="exampleInputPassword1">FullName</label>
           <input type="text" name="FullName" class="form-control" id="exampleInputPassword1">
+          <% if(error.toString().includes("FullName")){ %>
+            <small class="text-danger">invalid FullName</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">UserName</label>
           <input type="text" name="UserName" class="form-control" id="exampleInputPassword1">
+          <% if(error.toString().includes("UserName")){ %>
+            <small class="text-danger">invalid UserName</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
           <input type="Password" name="Password" class="form-control" id="exampleInputPassword1">
+          <% if(error.toString().includes("Password")){ %>
+            <small class="text-danger">invalid Password</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">city</label>
           <input type="text" name="Address.city" class="form-control" id="exampleInputPassword1">
+          <% if(error.toString().includes("Address.city")){ %>
+            <small class="text-danger">invalid City</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">street</label>
           <input type="text" name="Address.street" class="form-control" id="exampleInputPassword1">
+          <% if(error.toString().includes("Address.street")){ %>
+            <small class="text-danger">invalid Street</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">building</label>
           <input type="text" name="Address.building" class="form-control" id="exampleInputPassword1">
+          <% if(error.toString().includes("Address.building")){ %>
+            <small class="text-danger">invalid Address</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Photo</label>
@@ -51,6 +70,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
         <a href="/login">Already have an account</a>
+        
       </form>
     </div>
   </div>
