--- a/views/events/addevent.ejs
+++ b/views/events/addevent.ejs
@@ -26,10 +26,18 @@
         <div class="form-group">
           <label for="exampleInputPassword1">title</label>
           <input type="text" name="title" class="form-control" id="exampleInputPassword1">
+          <% if(message.toString().includes("title")){ %>
+            <small class="text-danger">invalid title</small>
+          <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">event_date</label>
-          <input type="date" name="event_date" class="form-control" id="exampleInputPassword1">
+          <%var today = new Date();%>
+          <%var dd = String(today.getDate()).padStart(2, '0');%>
+          <%var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!%>
+          <%var yyyy = today.getFullYear();%>
+          <%today = yyyy+'-' + mm + '-' +dd ;%>
+          <input type="date" required min="<%= today %>" max="2020-12-31"  name="event_date" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">mainSpeaker</label>
@@ -48,7 +56,7 @@
             <% }) %>
           </select>
         </div>
-        <button onclick="addevent()" class="btn btn-primary">add</button>
+        <button type="submit" class="btn btn-primary">add</button>
       </form>
     </div>
   </div>
@@ -76,21 +84,23 @@
     
   });
 
-  function addevent() {
-    idd = $("#id").val()
-    $.ajax({
-      url: "http://localhost:8080/admin/event/add",
-      method: "POST",
-      contentType: "application/json",
-      data: JSON.stringify({id:idd}),
-      dataType: "json",
-      success: function (result) { 
-       },
-      error: function (error) {
-        alert("failed to add")
-       }
-    })
-  }
+  // function addevent() {
+  //   idd = $("#id").val()
+  //   $.ajax({
+  //     url: "http://localhost:8080/admin/event/add",
+  //     method: "POST",
+  //     contentType: "application/json",
+  //     data: JSON.stringify({id:idd}),
+  //     dataType: "json",
+  //     timeout: 1000,
+  //     success: function (result) { 
+  //      },
+  //     error: function (error) {
+  //       alert("Failed to add")
+  //       location.replace("add")
+  //      }
+  //   })
+  // }
 </script>
 
 </html>
