--- a/views/speakers/editthis.ejs
+++ b/views/speakers/editthis.ejs
@@ -15,7 +15,6 @@
 <body>
     <%- include('../partials/nav.ejs') %>
     <%- include('../partials/chat.ejs') %>
-
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <form class="col" action="/admin/speaker/editthis" method="POST" enctype="multipart/form-data">
@@ -28,11 +27,17 @@
                     <label for="exampleInputPassword1">FullName</label>
                     <input type="text" value="<%= data.FullName %>" name="FullName" class="form-control"
                         id="exampleInputPassword1">
+                        <% if(error.toString().includes("FullName")){ %>
+                            <small class="text-danger">invalid FullName</small>
+                        <% } %>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">UserName</label>
                     <input type="text" readonly value="<%= data.UserName %>" name="UserName" class="form-control"
                         id="exampleInputPassword1">
+                    <% if(error.toString().includes("UserName")){ %>
+                        <small class="text-danger">invalid UserName</small>
+                    <% } %>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
@@ -43,20 +48,32 @@
                     <label for="exampleInputPassword1">city</label>
                     <input type="text" value="<%= data.Address.city %>" name="city" class="form-control"
                         id="exampleInputPassword1">
+                    <% if(error.toString().includes("Address.city")){ %>
+                        <small class="text-danger">invalid City</small>
+                    <% } %>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">street</label>
                     <input type="text" value="<%= data.Address.street %>" name="street" class="form-control"
                         id="exampleInputPassword1">
+                    <% if(error.toString().includes("Address.street")){ %>
+                        <small class="text-danger">invalid Address.street</small>
+                    <% } %>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">building</label>
                     <input type="text" value="<%= data.Address.building %>" name="building" class="form-control"
                         id="exampleInputPassword1">
+                    <% if(error.toString().includes("Address.building")){ %>
+                        <small class="text-danger">invalid building</small>
+                    <% } %>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Avatar</label>
                     <input type="file" name="avatar" />
+                    <% if(error.toString().includes("avatar")){ %>
+                        <small class="text-danger">invalid image</small>
+                    <% } %>
                 </div>
                 <button type="submit" class="btn btn-primary">Edit</button>
             </form>
